--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "php": "^7.2",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "~6.0",
+        "jrm2k6/cloudder": "^0.6.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^1.0",
         "tymon/jwt-auth": "dev-develop"
