--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "jrm2k6/cloudder": "^0.6.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^1.0",
+        "maatwebsite/excel": "^3.1",
         "mpociot/laravel-apidoc-generator": "^4.0",
         "tymon/jwt-auth": "dev-develop"
     },
