--- a/composer.json
+++ b/composer.json
@@ -12,13 +12,15 @@
         "barryvdh/laravel-cors": "^0.11.4",
         "doctrine/dbal": "^2.10",
         "fideloper/proxy": "^4.0",
-        "guzzlehttp/guzzle": "~6.0",
+        "guzzlehttp/guzzle": "^6.5",
         "jrm2k6/cloudder": "^0.6.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^1.0",
         "maatwebsite/excel": "^3.1",
+        "mailgun/mailgun-php": "^3.0",
         "mpociot/laravel-apidoc-generator": "^4.0",
-        "tymon/jwt-auth": "dev-develop"
+        "tymon/jwt-auth": "dev-develop",
+        "wildbit/swiftmailer-postmark": "^3.1"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
