--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
         "mpociot/laravel-apidoc-generator": "^4.0",
         "nyholm/psr7": "^1.2",
         "tymon/jwt-auth": "^1.0",
-        "wildbit/swiftmailer-postmark": "^3.1"
+        "wildbit/swiftmailer-postmark": "^3.1",
+        "yabacon/paystack-php": "^2.2"
     },
     "require-dev": {
         "symfony/console": "^5.0",
