--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "ext-curl": "*",
         "ext-gd": "*",
         "ext-json": "*",
+        "cloudinary-labs/cloudinary-laravel": "^1.0",
         "doctrine/dbal": "^2.10",
         "fideloper/proxy": "^4.0",
         "fruitcake/laravel-cors": "^1.0",
